--- a/template.yaml
+++ b/template.yaml
@@ -1,80 +1,94 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Resources:
-    ApiGateway:
-      Type: AWS::Serverless::Api
-      Properties:
-        Name: zeroweb-api
-        StageName: Prod
-        Cors:
-          AllowMethods: "'POST, GET'"
-          AllowOrigin: "'*'"
-          AllowHeaders: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
-        Auth:
-          DefaultAuthorizer: 'NONE'
-          InvokeRole: 'NONE'
-    ApiLambda:
-        Type: AWS::Serverless::Function
-        Properties:
-          FunctionName: zeroweb-api
-          Handler: graphql.handler
-          Runtime: nodejs14.x
-          CodeUri: ./api-server
-          Policies:
-            - AmazonDynamoDBFullAccess
-          Events:
-            AnyRequest:
-              Type: Api
-              Properties:
-                Path: /graphql
-                Method: post
-                RestApiId:
-                  Ref: ApiGateway
-                Auth:
-                  Authorizer: 'AWS_IAM'
-    AuthLambda:
-        Type: AWS::Serverless::Function
-        Properties:
-          FunctionName: zeroweb-auth
-          Handler: app.handler
-          Runtime: nodejs14.x
-          CodeUri: ./auth-server
-          Policies:
-            - AmazonCognitoDeveloperAuthenticatedIdentities
-            - AmazonCognitoPowerUser
-          Events:
-            CognitoToken:
-              Type: Api
-              Properties:
-                Path: /token
-                Method: post
-                RestApiId:
-                  Ref: ApiGateway
-            DeleteCognitoIdentity:
-              Type: Api
-              Properties:
-                Path: /identity
-                Method: delete
-                RestApiId:
-                  Ref: ApiGateway
-            TwitterRequestToken:
-              Type: Api
-              Properties:
-                Path: /twitter/oauth/request_token
-                Method: post
-                RestApiId:
-                  Ref: ApiGateway
-            TwitterAccessToken:
-              Type: Api
-              Properties:
-                Path: /twitter/oauth/access_token
-                Method: post
-                RestApiId:
-                  Ref: ApiGateway
-            TwitterUserInfo:
-              Type: Api
-              Properties:
-                Path: /twitter/user
-                Method: post
-                RestApiId:
-                  Ref: ApiGateway
+  ApiGateway:
+    Type: AWS::Serverless::Api
+    Properties:
+      Name: zeroweb-api
+      StageName: Prod
+      Cors:
+        AllowMethods: "'POST, GET'"
+        AllowOrigin: "'*'"
+        AllowHeaders: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
+      Auth:
+        DefaultAuthorizer: 'NONE'
+        InvokeRole: 'NONE'
+  ApiLambda:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: zeroweb-api
+      Handler: graphql.handler
+      Runtime: nodejs14.x
+      CodeUri: ./api-server
+      Policies:
+        - AmazonDynamoDBFullAccess
+      Events:
+        AnyRequest:
+          Type: Api
+          Properties:
+            Path: /graphql
+            Method: post
+            RestApiId:
+              Ref: ApiGateway
+            Auth:
+              Authorizer: 'AWS_IAM'
+  AuthLambda:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: zeroweb-auth
+      Handler: app.handler
+      Runtime: nodejs14.x
+      CodeUri: ./auth-server
+      Policies:
+        - AmazonCognitoDeveloperAuthenticatedIdentities
+        - AmazonCognitoPowerUser
+      Events:
+        CognitoToken:
+          Type: Api
+          Properties:
+            Path: /token
+            Method: post
+            RestApiId:
+              Ref: ApiGateway
+        DeleteCognitoIdentity:
+          Type: Api
+          Properties:
+            Path: /identity
+            Method: delete
+            RestApiId:
+              Ref: ApiGateway
+        TwitterRequestToken:
+          Type: Api
+          Properties:
+            Path: /twitter/oauth/request_token
+            Method: post
+            RestApiId:
+              Ref: ApiGateway
+        TwitterAccessToken:
+          Type: Api
+          Properties:
+            Path: /twitter/oauth/access_token
+            Method: post
+            RestApiId:
+              Ref: ApiGateway
+        TwitterUserInfo:
+          Type: Api
+          Properties:
+            Path: /twitter/user
+            Method: post
+            RestApiId:
+              Ref: ApiGateway
+        GithubAccessToken:
+          Type: Api
+          Properties:
+            Path: /github/oauth/access_token
+            Method: post
+            RestApiId:
+              Ref: ApiGateway
+        GithubUserInfo:
+          Type: Api
+          Properties:
+            Path: /github/user
+            Method: post
+            RestApiId:
+              Ref: ApiGateway
