--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "deploy:ci": "gatsby-plugin-s3 deploy --yes",
     "deploy:backend": "chmod +x ./build/package.sh && chmod +x ./build/deploy.sh && ./build/package.sh && ./build/deploy.sh",
     "invalidate": "aws cloudfront create-invalidation --distribution-id E18605QBCLR777 --paths '/*';",
-    "start": "NODE_OPTIONS='-r esm' gatsby develop --https",
+    "start": "NODE_OPTIONS='-r esm --openssl-legacy-provider' gatsby develop --https",
     "build:ci": "NODE_OPTIONS='-r esm --openssl-legacy-provider' gatsby build",
     "build": "NODE_OPTIONS='-r esm' gatsby build",
     "serve": "NODE_OPTIONS='-r esm' gatsby serve",
