--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "graphql-tag": "^2.12.4",
     "lodash.compose": "^2.4.1",
     "lodash.flatmap": "^4.5.0",
+    "mathjs": "^13.0.3",
     "photoswipe": "^5.2.7",
     "prism-react-renderer": "^1.1.1",
     "prismjs": "^1.23.0",
